--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,16 @@ on:
     branches:
       - main
 jobs:
-  ensure_fresh_release:
+  ensure_release:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - run: .github/scripts/ensure_fresh_release.sh
+      - run: .github/scripts/ensure_release.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   linux:
     runs-on: ubuntu-latest
-    needs: [ensure_fresh_release]
+    needs: [ensure_release]
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
@@ -27,7 +27,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   macos:
     runs-on: macos-10.15
-    needs: [ensure_fresh_release]
+    needs: [ensure_release]
     steps:
       - uses: actions/checkout@v2
       - run: brew install elixir
@@ -39,7 +39,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # windows:
   #   runs-on: windows-2019
-  #   needs: [ensure_fresh_release]
+  #   needs: [ensure_release]
   #   steps:
   #     - uses: actions/checkout@v2
   #     - uses: ilammy/msvc-dev-cmd@v1
