--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ jobs:
       - run: .github/scripts/upload_nif.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - run: rm deps/cmark/priv/cmark.so 
+      - run: CC=clang MIX_ENV=test OPTFLAGS="-target aarch64-linux-gnu" mix deps.compile --force
+      - run: .github/scripts/upload_nif.sh
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   macos:
     runs-on: macos-10.15
     needs: [ensure_release]
